# task05

./: CMakeLists.txt  README.md  package.xml
config/: camera_params.yaml  rviz_config.rviz
include/hik_camera/: armor_classifier.hpp  hik_camera_driver.hpp  light_strip_detector.hpp  pose_estimator.hpp
launch/: hik_camera.launch.py
number_recognition_model/: split_dataset.py  train_armor.py
src/: armor_classifier.cpp  hik_camera_driver.cpp  hik_camera_node.cpp  light_strip_detector.cpp  pose_estimator.cpp
