<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hik_camera</name>
  <version>0.0.0</version>
  <description>ROS2 driver for Hikvision industrial cameras using MVS SDK.
  Supports image streaming, parameter configuration, and auto-reconnect.
  </description>
  <maintainer email="307456383@qq.com">coordsys</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>